// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout snapshot renders correctly when not root pathname 1`] = `
<div>
  <div
    class="container max-w-3xl px4 py10"
  >
    <header
      class="py-10"
    >
      <h3>
        <a
          href="/"
        >
          test
        </a>
      </h3>
    </header>
    <main>
      <p>
        Test
      </p>
    </main>
    <footer
      class="py-10 text-center"
    >
      © 
      2021
      , Built with
       
      <a
        href="https://www.gatsbyjs.org"
      >
        Gatsby
      </a>
    </footer>
  </div>
</div>
`;

exports[`Layout snapshot renders correctly when root pathname 1`] = `
<div>
  <div
    class="container max-w-3xl px4 py10"
  >
    <header
      class="py-10"
    >
      <h1>
        <a
          href="/"
        >
          test
        </a>
      </h1>
    </header>
    <main>
      <p>
        Test
      </p>
    </main>
    <footer
      class="py-10 text-center"
    >
      © 
      2021
      , Built with
       
      <a
        href="https://www.gatsbyjs.org"
      >
        Gatsby
      </a>
    </footer>
  </div>
</div>
`;
